--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,14 @@ set(CMAKE_CXX_STANDARD 17)
 
 pico_sdk_init()
 
-# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lib/picow-http)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lib/picow-http)
 
 picoprobe_add_reset_target()
 
 add_executable(picow-http-example
 	${CMAKE_CURRENT_LIST_DIR}/src/main.c
+	${CMAKE_CURRENT_LIST_DIR}/src/handlers.c
+	${CMAKE_CURRENT_LIST_DIR}/src/handlers.h
 	${CMAKE_CURRENT_LIST_DIR}/src/lwipopts.h
 )
 
@@ -32,29 +34,27 @@ target_include_directories(picow-http-example PRIVATE
 )
 
 target_link_libraries(picow-http-example
+	picow_http
 	pico_cyw43_arch_lwip_threadsafe_background
-        pico_stdio
-        pico_stdlib
-        pico_multicore
-        hardware_adc
-        hardware_irq
-        hardware_sync
+	pico_stdio
+	pico_stdlib
+	pico_multicore
+	hardware_adc
+	hardware_irq
+	hardware_sync
 )
-#	picow_http
 
-# set(WWWSRCS
-# 	${CMAKE_CURRENT_LIST_DIR}/www/index.html
-# 	${CMAKE_CURRENT_LIST_DIR}/www/hello.html
-# 	${CMAKE_CURRENT_LIST_DIR}/www/goodbye.html
-# 	${CMAKE_CURRENT_LIST_DIR}/www/picow.css
-# 	${CMAKE_CURRENT_LIST_DIR}/www/favicon.png
-# )
+set(WWWSRCS
+ 	${CMAKE_CURRENT_LIST_DIR}/www/index.html
+ 	${CMAKE_CURRENT_LIST_DIR}/www/picow.css
+ 	${CMAKE_CURRENT_LIST_DIR}/www/favicon.png
+)
 
-# picow_http_gen_handlers(picow-http-example
-# 	${CMAKE_CURRENT_SOURCE_DIR}/www/www.yaml
-# 	${CMAKE_CURRENT_SOURCE_DIR}/www
-# 	${WWWSRCS}
-# )
+picow_http_gen_handlers(picow-http-example
+ 	${CMAKE_CURRENT_SOURCE_DIR}/www/www.yaml
+ 	${CMAKE_CURRENT_SOURCE_DIR}/www
+ 	${WWWSRCS}
+)
 
 pico_enable_stdio_usb(picow-http-example 0)
 pico_enable_stdio_uart(picow-http-example 1)
