Add the JS source to the WWW generation dependencies.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ set(WWWSRCS
  	${CMAKE_CURRENT_LIST_DIR}/www/index.html
  	${CMAKE_CURRENT_LIST_DIR}/www/picow.css
  	${CMAKE_CURRENT_LIST_DIR}/www/favicon.png
+ 	${CMAKE_CURRENT_LIST_DIR}/www/sample_app.js
 )
 
 picow_http_gen_handlers(picow-http-example
