Refactor the custom handlers.
The rssi value is now sent on its own endpoint /rssi, with its own
handlers.

Add a handler for the /netinfo endpoint, which sends the hostname,
IP address, MAC address and SSID. That information is passed to
the handler as private data, in a struct that is initialized before
the server starts. The front end only calls /netinfo once.

--- a/www/www.yaml
+++ b/www/www.yaml
@@ -23,7 +23,13 @@
     - HEAD
 
 - custom:
-    path: /ap
+    path: /rssi
+    methods:
+    - GET
+    - HEAD
+
+- custom:
+    path: /netinfo
     methods:
     - GET
     - HEAD
