--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.12)
 include(pico_sdk_import.cmake)
 include(picoprobe_targets.cmake)
 
-project(picow_http C CXX ASM)
+project(picow-http-example C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
