Add comments to CMakeLists.txt and picoprobe_targets.cmake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,13 @@
 cmake_minimum_required(VERSION 3.12)
 
+# From pico-sdk, to integrate the SDK into the project.
 include(pico_sdk_import.cmake)
+
+# Creates targets for use with a picoprobe, to flash the code and
+# reset the app. This requires that the locations of openocd and
+# optionally of its search path are in environment variables, or
+# passed to cmake as -D definitions. See the included file for
+# details.
 include(picoprobe_targets.cmake)
 
 project(picow-http-example C CXX ASM)
@@ -9,18 +16,42 @@ set(CMAKE_CXX_STANDARD 17)
 
 pico_sdk_init()
 
+# picow-http is included in this project as a git submodule, so it can
+# be integrated with add_subdirectory().
+#
+# If instead you have picow-http installed elsewhere on your system,
+# use include():
+#
+# include(path/to/picow-http)
+#
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lib/picow-http)
 
+# For use with a picoprobe (this has nothing to do with picow-http).
+# 'make reset' restarts the app.
 picoprobe_add_reset_target()
 
+# If NTP_SERVER is defined in the cmake invocation, pass in its value
+# to the preprocessor. See main.c
 if (DEFINED NTP_SERVER)
 	add_compile_definitions(NTP_SERVER=\"${NTP_SERVER}\")
 endif()
 
+# Optionally override the PicoW default hostname.
 if (DEFINED HOSTNAME)
 	add_compile_definitions(CYW43_HOST_NAME=\"${HOSTNAME}\")
 endif()
 
+# This project has targets for more than one executable, which differ
+# only in the choice of network architecture; see the SDK docs for
+# pico_cyw43_arch. Most apps will choose just one, but the example
+# includes more for demonstration purposes.
+#
+# The following definitions summarize elements that the different
+# excutables have in common.
+
+# Source files
+# We use the sample lwipopts.h definition from picow-http.
+# See: https://gitlab.com/slimhazard/picow_http/-/wikis/Configuring-lwipopts.h
 set(SRCS
 	${CMAKE_CURRENT_LIST_DIR}/src/main.c
 	${CMAKE_CURRENT_LIST_DIR}/src/handlers.c
@@ -28,11 +59,14 @@ set(SRCS
 	${CMAKE_CURRENT_LIST_DIR}/lib/picow-http/etc/lwipopts.h
 )
 
+# Include paths
+# Must include the path at which lwipopts.h is located.
 set(INCLUDES
 	${CMAKE_CURRENT_LIST_DIR}/src
 	${CMAKE_CURRENT_LIST_DIR}/lib/picow-http/etc
 )
 
+# Static WWW resources to be embedded for the HTTP server.
 set(WWWSRCS
 	${CMAKE_CURRENT_LIST_DIR}/www/index.html
 	${CMAKE_CURRENT_LIST_DIR}/www/picow.css
@@ -40,6 +74,9 @@ set(WWWSRCS
 	${CMAKE_CURRENT_LIST_DIR}/www/sample_app.js
 )
 
+# Libraries to be linked
+# The different versions link different choices for pico_cyw43_arch_lwip_*,
+# otherwise the libs are the same.
 set(LIBS
 	picow_http
 	pico_stdio
@@ -49,6 +86,10 @@ set(LIBS
 	hardware_irq
 	hardware_sync
 )
+
+# The next sections configure the executables; mostly standard for the
+# SDK. The picow_http_gen_handlers() directive is required for use
+# with picow-http.
 
 ##
 ## threadsafe background mode
@@ -63,22 +104,36 @@ target_compile_definitions(picow-http-example-background PRIVATE
 
 target_include_directories(picow-http-example-background PRIVATE ${INCLUDES})
 
+# pico_cyw43_arch_lwip_threadsafe_background sets the network
+# architecture.
 target_link_libraries(picow-http-example-background
 	pico_cyw43_arch_lwip_threadsafe_background
 	${LIBS}
 )
 
+# The arguments for picow_http_gen_handlers() are:
+# - target name
+# - YAML file that configures static resources and custom response
+#   handlers
+# - Directory that contains the static resources
+# - List of static resources; here defined in WWWSRCS above.
+# See: https://gitlab.com/slimhazard/picow_http/-/wikis/picow_http_gen_handlers
 picow_http_gen_handlers(picow-http-example-background
 	${CMAKE_CURRENT_SOURCE_DIR}/www/www.yaml
 	${CMAKE_CURRENT_SOURCE_DIR}/www
 	${WWWSRCS}
 )
 
+# This defines UART, but not USB, as the destination for the HTTP
+# server's log output.
 pico_enable_stdio_usb(picow-http-example-background 0)
 pico_enable_stdio_uart(picow-http-example-background 1)
 
 pico_add_extra_outputs(picow-http-example-background)
 
+# For use with a picoprobe.
+# 'make flash-picow-http-example-background' loads the binary to the
+# PicoW.
 picoprobe_add_flash_target(picow-http-example-background)
 
 pico_set_program_description(picow-http-example-background
@@ -101,11 +156,14 @@ target_compile_definitions(picow-http-example-poll PRIVATE
 
 target_include_directories(picow-http-example-poll PRIVATE ${INCLUDES})
 
+# pico_cyw43_arch_lwip_poll sets the network architecture tp poll
+# mode.
 target_link_libraries(picow-http-example-poll
 	pico_cyw43_arch_lwip_poll
 	${LIBS}
 )
 
+# Exactly as above
 picow_http_gen_handlers(picow-http-example-poll
  	${CMAKE_CURRENT_SOURCE_DIR}/www/www.yaml
  	${CMAKE_CURRENT_SOURCE_DIR}/www
